--- a/LiveArt.ProductsManagement.Api/LiveArt.ProductsManagement.Api.csproj
+++ b/LiveArt.ProductsManagement.Api/LiveArt.ProductsManagement.Api.csproj
@@ -16,4 +16,8 @@
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.4.10" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\LiveArt.ProductsManagement.Domain\LiveArt.ProductsManagement.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
